[package]
name = "slot_machine_hiyo"
version = "0.1.0"
authors = ["kareinonitsuke"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand="0.6.5"

[dependencies.serenity]
default-features = false
features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
]
version = "0.10"